src/objects/Test_Score__c.object
<CustomObject>
    <description>This object is used to store official test score results.</description>
    <fields>
        <fullName>ACT_Composite_Score__c</fullName>
        <description>ACT Composite Score</description>
        <inlineHelpText>ACT Composite Score</inlineHelpText>
        <label>ACT Composite Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACT_English_Score__c</fullName>
        <description>ACT English Score</description>
        <inlineHelpText>ACT English Score</inlineHelpText>
        <label>ACT English Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACT_Mathematics_Score__c</fullName>
        <description>ACT Mathematics Score</description>
        <inlineHelpText>ACT Mathematics Score</inlineHelpText>
        <label>ACT Mathematics Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACT_Reading_Score__c</fullName>
        <description>ACT Reading Score</description>
        <inlineHelpText>ACT Reading Score</inlineHelpText>
        <label>ACT Reading Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACT_Science_Score__c</fullName>
        <description>ACT Science Score</description>
        <inlineHelpText>ACT Science Score</inlineHelpText>
        <label>ACT Science Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACT_Writing_Score__c</fullName>
        <description>ACT Writing Score</description>
        <inlineHelpText>ACT Writing Score</inlineHelpText>
        <label>ACT Writing Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accuplacer_Mathematics__c</fullName>
        <label>Accuplacer Mathematics</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accuplacer_Reading__c</fullName>
        <label>Accuplacer Reading</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accuplacer_Writing__c</fullName>
        <label>Accuplacer Writing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLT_Composite_Score__c</fullName>
        <label>CLT Total Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLT_Math_Score__c</fullName>
        <label>CLT Quantitative Reasoning</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLT_Reading_Score__c</fullName>
        <label>CLT Verbal reasoning</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLT_Writing_Score__c</fullName>
        <label>CLT Grammar/Writing</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The person for which this test score belongs</description>
        <inlineHelpText>The person for which this test score belongs</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Test_Received__c</fullName>
        <label>Date Test Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_to_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRE_Analytical_Writing_Score__c</fullName>
        <description>GRE Analytical Writing Score</description>
        <inlineHelpText>GRE Analytical Writing Score</inlineHelpText>
        <label>GRE Analytical Writing Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRE_Quantitative_Reasoning_Score__c</fullName>
        <description>GRE Quantitative Reasoning Score</description>
        <inlineHelpText>GRE Quantitative Reasoning Score</inlineHelpText>
        <label>GRE Quantitative Reasoning Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRE_Verbal_Reasoning_Score__c</fullName>
        <description>GRE Verbal Reasoning Score</description>
        <inlineHelpText>GRE Verbal Reasoning Score</inlineHelpText>
        <label>GRE Verbal Reasoning Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holding_Name__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field for a custom object</inlineHelpText>
        <label>Holding Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IELTS_Listening_Score__c</fullName>
        <label>IELTS Listening Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IELTS_Overall_Band_Score__c</fullName>
        <label>IELTS Overall Band Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IELTS_Reading_Score__c</fullName>
        <label>IELTS Reading Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IELTS_Speaking_Score__c</fullName>
        <label>IELTS Speaking Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IELTS_Writing_Score__c</fullName>
        <label>IELTS Writing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAT_Percentile_for_Intended_Major__c</fullName>
        <description>MAT Percentile for Intended Major</description>
        <inlineHelpText>MAT Percentile for Intended Major</inlineHelpText>
        <label>MAT Percentile for Intended Major</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAT_Percentile_for_Total_Group__c</fullName>
        <description>MAT Percentile for Total Group</description>
        <inlineHelpText>MAT Percentile for Total Group</inlineHelpText>
        <label>MAT Percentile for Total Group</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAT_Scaled_Score__c</fullName>
        <description>MAT Scaled Score, range: 200 - 600</description>
        <inlineHelpText>MAT Scaled Score</inlineHelpText>
        <label>MAT Scaled Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Originally_Unclaimed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Originally Unclaimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSAT_Mathematics__c</fullName>
        <label>PSAT Mathematics</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSAT_Reading__c</fullName>
        <label>PSAT Reading</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSAT_Verbal__c</fullName>
        <label>PSAT Verbal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSAT_Writing__c</fullName>
        <label>PSAT Writing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSAT__c</fullName>
        <label>PSAT Composite</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Grammar__c</fullName>
        <label>PTE Grammar</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Listening__c</fullName>
        <label>PTE Listening</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Oral_Fluency__c</fullName>
        <label>PTE Oral Fluency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Overall_Score__c</fullName>
        <label>PTE Overall Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Pronounciation__c</fullName>
        <label>PTE Pronounciation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Reading__c</fullName>
        <label>PTE Reading</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Speaking__c</fullName>
        <label>PTE Speaking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Spelling__c</fullName>
        <label>PTE Spelling</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Vocabulary__c</fullName>
        <label>PTE Vocabulary</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Writing__c</fullName>
        <label>PTE Writing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTE_Written_Discourse__c</fullName>
        <label>PTE Written Discourse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies the previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_JSON__c</fullName>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field for a custom object</inlineHelpText>
        <label>Related Object JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAT_Composite_Score__c</fullName>
        <description>SAT Composite Score</description>
        <inlineHelpText>SAT Composite Score</inlineHelpText>
        <label>SAT Composite Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAT_Critical_Reading_Score__c</fullName>
        <description>SAT Reading Score</description>
        <inlineHelpText>SAT Reading Score</inlineHelpText>
        <label>SAT Critical Reading Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAT_Mathematics_Score__c</fullName>
        <description>SAT Mathematics Score</description>
        <inlineHelpText>SAT Mathematics Score</inlineHelpText>
        <label>SAT Mathematics Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAT_Writing_Score__c</fullName>
        <label>SAT Writing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Official</fullName>
                </value>
                <value>
                    <fullName>Official, not final</fullName>
                </value>
                <value>
                    <fullName>Unofficial, received by email</fullName>
                </value>
                <value>
                    <fullName>Unofficial, open envelope</fullName>
                </value>
                <value>
                    <fullName>Unofficial, score on transcript</fullName>
                </value>
                <value>
                    <fullName>Unofficial, see notes</fullName>
                </value>
                <value>
                    <fullName>Not Yet Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOEFL_Listening_Score__c</fullName>
        <label>TOEFL Listening Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOEFL_Reading_Score__c</fullName>
        <label>TOEFL Reading Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOEFL_Speaking_Score__c</fullName>
        <label>TOEFL Speaking Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOEFL_Total_Score__c</fullName>
        <label>TOEFL Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOEFL_Writing_Score__c</fullName>
        <label>TOEFL Writing Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <description>The date the test was taken</description>
        <inlineHelpText>The date the test was taken</inlineHelpText>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <description>The Test type name. This should match the record type.</description>
        <inlineHelpText>The test type</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unofficial_Received_Date_1__c</fullName>
        <description>Unofficial Received Date</description>
        <label>Unofficial Received Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unofficial_Received_Date_2__c</fullName>
        <description>Unofficial Received Date</description>
        <label>Unofficial Received Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required EASY field for a custom object</description>
        <inlineHelpText>Required EASY field for a custom object</inlineHelpText>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Test Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contact__c</columns>
        <columns>Date_Test_Received__c</columns>
        <columns>Document_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Test Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scores</pluralLabel>
    <recordTypes>
        <fullName>ACT</fullName>
        <active>true</active>
        <description>Record type for an ACT test scores</description>
        <label>ACT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accuplacer</fullName>
        <active>true</active>
        <label>Accuplacer</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLT</fullName>
        <active>true</active>
        <label>CLT</label>
    </recordTypes>
    <recordTypes>
        <fullName>GRE</fullName>
        <active>true</active>
        <description>Record type for an GRE test scores</description>
        <label>GRE</label>
    </recordTypes>
    <recordTypes>
        <fullName>IELTS</fullName>
        <active>true</active>
        <label>IELTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>MAT</fullName>
        <active>true</active>
        <description>Record type for an MAT test scores</description>
        <label>MAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Record type for Other test types</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSAT</fullName>
        <active>true</active>
        <description>Record type for an PSAT test scores</description>
        <label>PSAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>PTE</fullName>
        <active>true</active>
        <label>PTE</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAT</fullName>
        <active>true</active>
        <description>Record type for an SAT test scores</description>
        <label>SAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>TOEFL</fullName>
        <active>true</active>
        <description>Record type for an TOEFL test scores</description>
        <label>TOEFL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_for_Credit</fullName>
        <active>true</active>
        <description>Tests such as AP and CLEP</description>
        <label>Test for Credit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACT_Scoring</fullName>
        <active>false</active>
        <description>ACT scores cannot be greater then 36</description>
        <errorConditionFormula>OR( ACT_Mathematics_Score__c &gt; 36, ACT_Reading_Score__c &gt; 36,  ACT_Science_Score__c &gt; 36, ACT_Writing_Score__c &gt; 36, ACT_Composite_Score__c &gt; 36, ACT_English_Score__c &gt; 36)</errorConditionFormula>
        <errorMessage>ACT scores cannot be greater then 36</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAT_Scoring</fullName>
        <active>false</active>
        <description>SAT test scores cannot be greater then 1600</description>
        <errorConditionFormula>OR(SAT_Composite_Score__c &gt; 1600, SAT_Mathematics_Score__c &gt; 1600, SAT_Critical_Reading_Score__c &gt; 1600)</errorConditionFormula>
        <errorMessage>SAT scores cannot be greater than 1600</errorMessage>
    </validationRules>
</CustomObject>